test/files/neg/bad-advice.check
bad-advice.scala:4: error: pattern type is incompatible with expected type;
 found   : Bip.type
 required: Int
    case Bip => true
         ^
one error found
